feat: configure internationalization (i18n) with locale resolver
- Add LocaleConfig class with SessionLocaleResolver
- Configure LocaleChangeInterceptor for language switching
- Set Polish (pl) as default locale
- Add comprehensive message bundles for all UI text:
  - Polish (messages_pl.properties) - 50+ translation keys
  - English (messages_en.properties) - complete translations
  - German (messages_de.properties) - complete translations
- Include translations for zones, wizard steps, device management
- Update base layout to use i18n message keys
- Support dynamic language switching via URL parameter 'lang'
- Cover all UX mockup text requirements from design specifications

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,1 +1,50 @@
-hello=Hello World!
+# Navigation and UI
+hello=Hello
+zones=Zones
+back=Back
+add_zone=Add Zone
+add_first_zone=Add First Zone
+add_another=Add Another
+go_to_zones=Go to Zones
+
+# Zone Management
+zone_name=Zone Name
+zone_address=Address
+zone_radius=Zone Radius
+zone_icon=Zone Icon
+zone_notifications=Notifications
+zone_created=Zone Created!
+zone_created_description=Thanks to setting up the zone, you will always receive an automatic alert when your loved one enters or leaves the designated area.
+
+# Zone Wizard Steps
+step_1_of_4=Step 1 of 4
+step_2_of_4=Step 2 of 4
+step_3_of_4=Step 3 of 4
+step_4_of_4=Step 4 of 4
+next=Next
+save=Save
+cancel=Cancel
+
+# Zone Creation
+zone_name_placeholder=Enter name
+zone_address_placeholder=Enter address
+choose_icon=Choose Icon
+set_location=Set Location
+set_zone_area=Set Zone Area
+choose_devices=Choose Devices
+radius_range=100m - 5000m
+current_radius=Area Radius
+adjust_radius=Adjust the area size with gestures or plus and minus buttons. Maximum zone radius is 5000m.
+
+# Empty State
+zones_empty_title=What are Safety Zones?
+zones_empty_description=Receive automatic notifications when your loved ones enter or leave important places
+zones_empty_benefit1=Set zones around home, school, work or playground
+zones_empty_benefit2=Be at peace knowing your loved ones are safe in designated places
+
+# Device Management
+device_phone=phone
+device_watch=watch
+device_band=band
+enable_notifications=Enable Notifications
+notification_tip=When you enable notifications, you will receive alerts for both entry and exit of the device from the zone. World!
