--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -1,1 +1,50 @@
-hello=Witaj Świecie!
+# Navigation and UI
+hello=Witaj
+zones=Strefy
+back=Wstecz
+add_zone=Dodaj strefę
+add_first_zone=Dodaj pierwszą strefę
+add_another=Dodaj kolejną
+go_to_zones=Przejdź do stref
+
+# Zone Management
+zone_name=Nazwa strefy
+zone_address=Adres
+zone_radius=Promień strefy
+zone_icon=Ikona strefy
+zone_notifications=Powiadomienia
+zone_created=Strefa została utworzona!
+zone_created_description=Dzięki ustawieniu strefy zawsze otrzymasz automatyczny alert, gdy Twój Bliski wejdzie lub wyjdzie z wyznaczonego obszaru.
+
+# Zone Wizard Steps
+step_1_of_4=Krok 1 z 4
+step_2_of_4=Krok 2 z 4
+step_3_of_4=Krok 3 z 4
+step_4_of_4=Krok 4 z 4
+next=Dalej
+save=Zapisz
+cancel=Anuluj
+
+# Zone Creation
+zone_name_placeholder=Wpisz nazwę
+zone_address_placeholder=Wpisz adres
+choose_icon=Wybierz ikonę
+set_location=Określ lokalizację
+set_zone_area=Ustal obszar strefy
+choose_devices=Wybierz urządzenia
+radius_range=100m - 5000m
+current_radius=Promień obszaru
+adjust_radius=Dostosuj wielkość obszaru gestem lub za pomocą przycisków plus i minus. Maksymalny promień strefy to 5000m.
+
+# Empty State
+zones_empty_title=Czym są strefy bezpieczeństwa?
+zones_empty_description=Otrzymuj automatyczne powiadomienia gdy Twoi bliscy wejdą lub wyjdą z ważnych miejsc
+zones_empty_benefit1=Ustaw strefy wokół domu, szkoły, pracy czy placu zabaw
+zones_empty_benefit2=Bądź spokojny wiedząc, że Twoi bliscy są bezpieczni w określonych miejscach
+
+# Device Management
+device_phone=telefon
+device_watch=zegarek
+device_band=opaska
+enable_notifications=Włącz powiadomienia
+notification_tip=Gdy włączysz powiadomienia, będziesz otrzymywać alerty zarówno o wejściu, jak i wyjściu urządzenia ze strefy. Świecie!
