i18n: fix missing zones intro, translate notifications label; add language selector to login pages and localize login text

--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -48,3 +48,34 @@ device_watch=Uhr
 device_band=Armband
 enable_notifications=Benachrichtigungen aktivieren
 notification_tip=Wenn Sie Benachrichtigungen aktivieren, erhalten Sie Warnungen sowohl für den Eintritt als auch für den Austritt des Geräts aus der Zone.
+
+# Additional UI
+zones_title=Sicherheitszonen
+zones_manage_intro=Verwalten Sie Sicherheitszonen für Ihre Liebsten
+devices_count={0} Geräte
+footer_copyright=© 2024 Sichere Familie. Alle Rechte vorbehalten.
+footer_help=Hilfe
+footer_contact=Kontakt
+footer_terms=AGB
+
+# Wizard Titles & Descriptions
+wizard_step1_title=Zonenname und Symbol
+wizard_step1_desc=Wählen Sie einen Namen und ein Symbol für die Zone
+wizard_step2_title=Zonenstandort
+wizard_step2_desc=Adresse eingeben oder Standort auf der Karte wählen
+wizard_step3_title=Zonenradius
+wizard_step3_desc=Stellen Sie den Sicherheitszonenradius ein
+wizard_step4_title=Benachrichtigungen
+wizard_step4_desc=Wählen Sie Geräte, die Benachrichtigungen erhalten
+save_zone=Zone speichern
+
+# Login
+login_title=Systemanmeldung
+login_subtitle=Geben Sie Ihre Telefonnummer ein, um einen OTP-Code zu erhalten
+phone_number=Telefonnummer
+send_otp=OTP-Code senden
+otp_code=OTP-Code
+login=Anmelden
+demo_data=Demodaten:
+note=Hinweis:
+otp_note=Der OTP-Code wird in der App-Konsole und auf der Seite angezeigt.
