--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -48,3 +48,34 @@ device_watch=watch
 device_band=band
 enable_notifications=Enable Notifications
 notification_tip=When you enable notifications, you will receive alerts for both entry and exit of the device from the zone. World!
+
+# Additional UI
+zones_title=Safety Zones
+zones_manage_intro=Manage safety zones for your loved ones
+devices_count={0} devices
+footer_copyright=© 2024 Safe Family. All rights reserved.
+footer_help=Help
+footer_contact=Contact
+footer_terms=Terms
+
+# Wizard Titles & Descriptions
+wizard_step1_title=Zone Name and Icon
+wizard_step1_desc=Choose a name and icon for the zone
+wizard_step2_title=Zone Location
+wizard_step2_desc=Enter address or pick a location on the map
+wizard_step3_title=Zone Radius
+wizard_step3_desc=Set the safety zone radius
+wizard_step4_title=Notifications
+wizard_step4_desc=Choose devices that will receive notifications
+save_zone=Save Zone
+
+# Login
+login_title=System Login
+login_subtitle=Enter your phone number to receive an OTP code
+phone_number=Phone number
+send_otp=Send OTP Code
+otp_code=OTP Code
+login=Log in
+demo_data=Demo data:
+note=Note:
+otp_note=The OTP code will be shown in the app console and on the page.
