--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -48,3 +48,34 @@ device_watch=zegarek
 device_band=opaska
 enable_notifications=Włącz powiadomienia
 notification_tip=Gdy włączysz powiadomienia, będziesz otrzymywać alerty zarówno o wejściu, jak i wyjściu urządzenia ze strefy. Świecie!
+
+# Additional UI
+zones_title=Strefy Bezpieczeństwa
+zones_manage_intro=Zarządzaj strefami bezpieczeństwa dla swoich bliskich
+devices_count={0} urządzeń
+footer_copyright=© 2024 Bezpieczna Rodzina. Wszystkie prawa zastrzeżone.
+footer_help=Pomoc
+footer_contact=Kontakt
+footer_terms=Regulamin
+
+# Wizard Titles & Descriptions
+wizard_step1_title=Nazwa i ikona strefy
+wizard_step1_desc=Wybierz nazwę i ikonę strefy
+wizard_step2_title=Lokalizacja strefy
+wizard_step2_desc=Wprowadź adres lub wybierz lokalizację na mapie
+wizard_step3_title=Promień strefy
+wizard_step3_desc=Ustaw promień strefy bezpieczeństwa
+wizard_step4_title=Powiadomienia
+wizard_step4_desc=Wybierz urządzenia, które będą otrzymywać powiadomienia
+save_zone=Zapisz strefę
+
+# Login
+login_title=Logowanie do systemu
+login_subtitle=Wprowadź numer telefonu, aby otrzymać kod OTP
+phone_number=Numer telefonu
+send_otp=Wyślij kod OTP
+otp_code=Kod OTP
+login=Zaloguj się
+demo_data=Dane testowe:
+note=Uwaga:
+otp_note=Kod OTP będzie wyświetlony w konsoli aplikacji oraz w komunikacie na stronie.
