i18n: translate wizard step titles and icon labels; bind zones topbar to zones_title; set wizard pageTitle via MessageSource

--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -68,6 +68,16 @@ wizard_step3_desc=Stellen Sie den Sicherheitszonenradius ein
 wizard_step4_title=Benachrichtigungen
 wizard_step4_desc=Wählen Sie Geräte, die Benachrichtigungen erhalten
 save_zone=Zone speichern
+wizard_title=Zonenassistent
+wizard_edit_title=Zone bearbeiten
+icon_home=Zuhause
+icon_school=Schule
+icon_work=Arbeit
+icon_hospital=Krankenhaus
+icon_gym=Fitnessstudio
+icon_park=Park
+icon_shop=Geschäft
+icon_restaurant=Restaurant
 
 # Login
 login_title=Systemanmeldung
