--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -68,6 +68,16 @@ wizard_step3_desc=Set the safety zone radius
 wizard_step4_title=Notifications
 wizard_step4_desc=Choose devices that will receive notifications
 save_zone=Save Zone
+wizard_title=Zone Wizard
+wizard_edit_title=Edit Zone
+icon_home=Home
+icon_school=School
+icon_work=Work
+icon_hospital=Hospital
+icon_gym=Gym
+icon_park=Park
+icon_shop=Shop
+icon_restaurant=Restaurant
 
 # Login
 login_title=System Login
