--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -68,6 +68,16 @@ wizard_step3_desc=Ustaw promień strefy bezpieczeństwa
 wizard_step4_title=Powiadomienia
 wizard_step4_desc=Wybierz urządzenia, które będą otrzymywać powiadomienia
 save_zone=Zapisz strefę
+wizard_title=Kreator strefy
+wizard_edit_title=Edytuj strefę
+icon_home=Dom
+icon_school=Szkoła
+icon_work=Praca
+icon_hospital=Szpital
+icon_gym=Siłownia
+icon_park=Park
+icon_shop=Sklep
+icon_restaurant=Restauracja
 
 # Login
 login_title=Logowanie do systemu
