i18n: add zones_map key for EN/DE and PL

--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -89,3 +89,6 @@ login=Anmelden
 demo_data=Demodaten:
 note=Hinweis:
 otp_note=Der OTP-Code wird in der App-Konsole und auf der Seite angezeigt.
+
+# Additional keys
+zones_map=Zonenkarte
