--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -53,6 +53,7 @@ notification_tip=When you enable notifications, you will receive alerts for both
 zones_title=Safety Zones
 zones_manage_intro=Manage safety zones for your loved ones
 devices_count={0} devices
+zones_map=Zones map
 footer_copyright=© 2024 Safe Family. All rights reserved.
 footer_help=Help
 footer_contact=Contact
